--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.0",
   "name": "ignews",
   "private": true,
   "scripts": {
@@ -8,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "stripe": "^8.186.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
