--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.21.1",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
     "next": "12.0.2",
