--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.0.2",
     "next-auth": "^3.29.0",
     "prismic-dom": "^2.2.6",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
