--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
@@ -25,11 +26,18 @@
     "stripe": "^8.186.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
+    "babel-jest": "^27.4.2",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.3",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.4.4"
   }
 }
